--- a/jupyter_notebooks/DataCollection.ipynb
+++ b/jupyter_notebooks/DataCollection.ipynb
@@ -25,14 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/workspace/Mildew-Detection-in-Cherry-Leaves-P5/\n"
+      "/workspace/Mildew-Detection-Project/\n"
      ]
     }
    ],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting kaggle\n",
+      "  Downloading kaggle-1.5.12.tar.gz (58 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m59.0/59.0 kB\u001b[0m \u001b[31m6.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hRequirement already satisfied: six>=1.10 in /workspace/.pip-modules/lib/python3.8/site-packages (from kaggle) (1.15.0)\n",
+      "Requirement already satisfied: certifi in /home/gitpod/.pyenv/versions/3.8.12/lib/python3.8/site-packages (from kaggle) (2022.12.7)\n",
+      "Requirement already satisfied: python-dateutil in /home/gitpod/.pyenv/versions/3.8.12/lib/python3.8/site-packages (from kaggle) (2.8.2)\n",
+      "Requirement already satisfied: requests in /home/gitpod/.pyenv/versions/3.8.12/lib/python3.8/site-packages (from kaggle) (2.28.1)\n",
+      "Collecting tqdm\n",
+      "  Downloading tqdm-4.64.1-py2.py3-none-any.whl (78 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.5/78.5 kB\u001b[0m \u001b[31m12.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hCollecting python-slugify\n",
+      "  Downloading python_slugify-7.0.0-py2.py3-none-any.whl (9.4 kB)\n",
+      "Requirement already satisfied: urllib3 in /home/gitpod/.pyenv/versions/3.8.12/lib/python3.8/site-packages (from kaggle) (1.26.13)\n",
+      "Collecting text-unidecode>=1.3\n",
+      "  Downloading text_unidecode-1.3-py2.py3-none-any.whl (78 kB)\n",
+      "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m78.2/78.2 kB\u001b[0m \u001b[31m19.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+      "\u001b[?25hRequirement already satisfied: charset-normalizer<3,>=2 in /home/gitpod/.pyenv/versions/3.8.12/lib/python3.8/site-packages (from requests->kaggle) (2.1.1)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /home/gitpod/.pyenv/versions/3.8.12/lib/python3.8/site-packages (from requests->kaggle) (3.4)\n",
+      "Building wheels for collected packages: kaggle\n",
+      "  Building wheel for kaggle (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for kaggle: filename=kaggle-1.5.12-py3-none-any.whl size=73031 sha256=b60723ee6ec53f61bfb82a74f2467957822fc5d1ca47b530187bc2ce3aaeda72\n",
+      "  Stored in directory: /home/gitpod/.cache/pip/wheels/03/f3/c7/fc5a63bb33d22177609b06c5b4c714b5eb3f1b195ce9dc5e47\n",
+      "Successfully built kaggle\n",
+      "Installing collected packages: text-unidecode, tqdm, python-slugify, kaggle\n",
+      "Successfully installed kaggle-1.5.12 python-slugify-7.0.0 text-unidecode-1.3 tqdm-4.64.1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# install kaggle package\n",
+    "! pip install kaggle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,16 +117,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading cherry-leaves.zip to /workspace/Mildew-Detection-in-Cherry-Leaves-P5/inputs/cherry_leaves-datases\n",
-      " 89%|█████████████████████████████████▊    | 49.0M/55.0M [00:01<00:00, 42.6MB/s]\n",
-      "100%|██████████████████████████████████████| 55.0M/55.0M [00:01<00:00, 36.4MB/s]\n"
+      "Downloading cherry-leaves.zip to /workspace/Mildew-Detection-Project/inputs/cherry-leaves-datasets\n",
+      " 95%|███████████████████████████████████▉  | 52.0M/55.0M [00:02<00:00, 30.3MB/s]\n",
+      "100%|██████████████████████████████████████| 55.0M/55.0M [00:02<00:00, 24.6MB/s]\n"
      ]
     }
    ],
@@ -91,15 +134,24 @@
     "# kaggle dataset and download\n",
     "\n",
     "KaggleDatasetPath = \"codeinstitute/cherry-leaves\"\n",
-    "DestinationFolder = f\"{root_directory}inputs/cherry_leaves-datases\"\n",
+    "DestinationFolder = f\"{root_directory}inputs/cherry-leaves-datasets\"\n",
     "! kaggle datasets download -d {KaggleDatasetPath} -p {DestinationFolder}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Archive:  /workspace/Mildew-Detection-Project/inputs/cherry-leaves-datasets/cherry-leaves.zip\n",
+      "replace /workspace/Mildew-Detection-Project/inputs/cherry-leaves-datasets/cherry-leaves/healthy/0008f3d3-2f85-4973-be9a-1b520b8b59fc___JR_HL 4092.JPG? [y]es, [n]o, [A]ll, [N]one, [r]ename: ^C\n"
+     ]
+    }
+   ],
    "source": [
     "# unziping data\n",
     "\n",
