collecting data from kaggle nd data preparation

--- a/jupyter_notebooks/DataCollection.ipynb
+++ b/jupyter_notebooks/DataCollection.ipynb
@@ -160,10 +160,11 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data preperation"
+    "# Data preparation"
    ]
   },
   {
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -204,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +220,7 @@
     }
    ],
    "source": [
-    "remove_non_image_file(my_data_dir=f'{root_directory}inputs/cherry_leaves-datasets/cherry-leaves/')"
+    "remove_non_image_file(my_data_dir=f'{root_directory}inputs/cherry-leaves-datasets/cherry-leaves/')"
    ]
   },
   {
@@ -231,15 +232,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/workspace/Mildew-Detection-in-Cherry-Leaves-P5/inputs/cherry-leaves-datasets/cherry-leaves/healthy/\n",
-      "/workspace/Mildew-Detection-in-Cherry-Leaves-P5/inputs/cherry-leaves-datasets/cherry-leaves/powdery_mildew/\n"
+      "/workspace/Mildew-Detection-Project/inputs/cherry-leaves-datasets/cherry-leaves/healthy/\n",
+      "/workspace/Mildew-Detection-Project/inputs/cherry-leaves-datasets/cherry-leaves/powdery_mildew/\n"
      ]
     }
    ],
@@ -261,16 +262,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/workspace/Mildew-Detection-in-Cherry-Leaves-P5/model/data_train/\n",
-      "/workspace/Mildew-Detection-in-Cherry-Leaves-P5/model/data_test/\n",
-      "/workspace/Mildew-Detection-in-Cherry-Leaves-P5/model/data_validation/\n"
+      "/workspace/Mildew-Detection-Project/model/data_train/\n",
+      "/workspace/Mildew-Detection-Project/model/data_test/\n",
+      "/workspace/Mildew-Detection-Project/model/data_validation/\n"
      ]
     }
    ],
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -412,7 +413,7 @@
        "[4208 rows x 2 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
